# workshop_fastAPI

base_structure/: pyproject.toml
examples/: example.db  pyproject.toml
examples/src/workshop/e01_basic_structure/: main.py
examples/src/workshop/e02_data_validation/: main.py
examples/src/workshop/e03_response_codes/: main.py
examples/src/workshop/e04_dependencies/: main.py
examples/src/workshop/e05_middleware/: logging_middleware.py  main.py
examples/src/workshop/e06_cors/: main.py
examples/src/workshop/e07a_basic_auth_security/: main.py
examples/src/workshop/e07b_oauth2_basics/: main.py
examples/src/workshop/e07c_oauth2_secure/: main.py
examples/src/workshop/e08a_database/: main.py
examples/src/workshop/e08b_database_async/: main.py
examples/src/workshop/e09_async/: main.py
examples/src/workshop/e10_testing/: main.py  test_main.py
examples/src/workshop/e11_documentation/: main.py
examples/src/workshop/e12_api_router/: admin.py  catalog.py
examples/src/workshop/e13_deployment/: Dockerfile  main.py  pyproject.toml
examples/src/workshop/e14_live_coding/: main_01.py  main_02.py  main_03.py
examples/src/workshop/e15_stepci_demo/: main.py  workflow.yml
examples/src/workshop/e16_calling_apis_async/: api.py  caller.py  caller_2.py  pyproject.toml
