# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "base_structure"
version = "1.0.0"
description = "Project for fastAPI Trainings"
authors = [
    { name = "Orell Garten", email = "hello@orellgarten.com" },
]

dependencies = [
    "fastapi[all]>=0.115.4",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.16",
    "sqlalchemy>=2.0.36",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "alembic>=1.13.3",
    "httpx>=0.27.2",
    "pytest>=8.3.3",
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "aiosqlite>=0.20.0"
]
requires-python = ">=3.12"



