# pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e12deployment"
version = "1.0.0"
description = "Project for fastAPI Trainings"

dependencies = [
    "fastapi[all]>=0.111.0",
    "uvicorn[standard]",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.3.4",
]
requires-python = ">=3.12"
